--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,4 +3,22 @@ body
     color: blueviolet;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+#container
+{
+    width: 100%;
+    padding: 1cm;
+    border: 1px solid #0000;
+    text-align: left;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    color: #0000;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
 }
