--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,18 @@ body
     margin: 0;
     padding: 0;
 }
+
+#cabecera
+{
+    background-color: #0000;
+    box-shadow: 0px 2px 20px 0px #0000;
+    color: #fff;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+    text-align: center;
+}
+
 #container
 {
     width: 100%;
